examples/test/testpolicy5966.yaml
apiVersion: networking.k8s.io/v1
kind: NetworkPolicy
metadata:
  name: policy5966
  namespace: namespace468
spec:
  podSelector:
    matchLabels:
      key45: value7
      key10: value47
  policyTypes:
  ingress:
  - from:
    - namespaceSelector:
        matchLabels:
          key11: value42
          key29: value15
      podSelector:
        matchLabels:
          key2: value23
          key33: value16
          key11: value27
